fix: added spacing to the in urgent

--- a/src/app/pages/summary/summary.scss
+++ b/src/app/pages/summary/summary.scss
@@ -131,6 +131,7 @@
 	.date {
 		font-weight: 700;
 		font-size: 1.25rem;
+		margin-bottom: $spacing-sm;
 	}
 
 	.sub {
